--- a/archivers/par2/Portfile
+++ b/archivers/par2/Portfile
@@ -8,15 +8,14 @@ revision          0
 description       Parchive: Parity Archive Volume Set for data recovery
 
 long_description  Parchive takes .par files and can regenerate missing data \
-                  based upon a Reed-Soloman Code. This is useful for \
-                  restoring missing pieces of a multi-part archive like the \
-                  kinds used on Usenet. Version 2 does not require \
-                  like-sized pieces, so it is useful for many more kinds of \
-                  data recovery.
+                  based upon a Reed-Soloman Code. This is useful \
+                  for restoring missing pieces of a multi-part archive \
+                  like the kinds used on Usenet. Version 2 does not require \
+                  like-sized pieces, so it is useful for many more kinds \
+                  of data recovery.
 
 license           GPL-2
 categories        archivers
-platforms         darwin
 maintainers       nomaintainer
 
 checksums         rmd160 5e9bb8fd1b71c41c7b3fe1adf729df7b8f7936bd \
@@ -27,7 +26,8 @@ github.tarball_from releases
 
 installs_libs     no
 
-configure.args    --mandir=${prefix}/share/man
+configure.args    --mandir=${prefix}/share/man \
+                  --build=powerpc-apple-darwin10
 
 test.run          yes
 test.target       check
@@ -36,7 +36,7 @@ test.target       check
 # macports-clang-3.5 works
 # Assuming > 600 works
 compiler.cxx_standard 2011
-compiler.blacklist-append macports-clang-3.3 macports-clang-3.4 {clang < 600}
+compiler.blacklist-append *clang*
 
 post-destroot {
     set docdir ${prefix}/share/doc/${name}-${version}
