--- a/devel/apr-util/Portfile
+++ b/devel/apr-util/Portfile
@@ -8,11 +8,12 @@ revision	2
 categories	devel
 maintainers	{geeklair.net:dluke @danielluke}
 platforms	darwin
-description	utilities built with the apache group's portability library
+description	utilities built with the apache group’s portability library
 license		Apache-2
 
-long_description	apr-util is a library of useful utilities built with \
-			and intended to be used with the Apache Portable Runtime.
+long_description \
+            apr-util is a library of useful utilities built \
+			with and intended to be used with the Apache Portable Runtime.
 
 homepage	https://apr.apache.org/
 master_sites	apache:apr
@@ -33,6 +34,9 @@ configure.args	--with-apr=${prefix}/bin/apr-1-config --with-expat=${prefix} \
 		--with-iconv=${prefix} --with-berkeley-db=${prefix}/include:${prefix}/lib/db48 \
 		--without-mysql --without-pgsql --without-sqlite2 --with-sqlite3=${prefix} \
 		--without-odbc
+
+# For Rosetta
+configure.args-append	--build=powerpc-apple-darwin10 --host=powerpc-apple-darwin10
 
 test.run	yes
 test.target	check
