--- a/devel/apr/Portfile
+++ b/devel/apr/Portfile
@@ -7,13 +7,13 @@ revision           3
 categories         devel
 maintainers        {geeklair.net:dluke @danielluke}
 platforms          darwin
-description        The apache group's portability library
+description        The apache group’s portability library
 license            Apache-2
 
 long_description   The Apache Portable Runtime is a library of C data \
                    structures and routines, forming a system portability \
-                   layer that covers as many operating systems as \
-                   possible, including Unices, Win32, BeOS, and OS/2.
+                   layer that covers as many operating systems \
+                   as possible, including Unices, Win32, BeOS and OS/2.
 
 homepage           https://apr.apache.org/
 master_sites       apache:apr
@@ -23,7 +23,7 @@ checksums          rmd160  4b282845f4ba1c4949b7b386c438e5ef98deaf4b \
                    sha256  e2e148f0b2e99b8e5c6caa09f6d4fb4dd3e83f744aa72a952f94f5a14436f7ea \
                    size    872238
 
-# Xcode 3.x's gcc-4.0 generates bad code in apr's translation which can be caught by enabling
+# Xcode 3.x’s gcc-4.0 generates bad code in apr’s translation which can be caught by enabling
 # debugging in apr, apr-util, and subversion with LANG="en_US.UTF-8"
 # Assertion failed: (node->next == NULL), function put_xlate_handle_node, file subversion/libsvn_subr/utf.c, line 378.
 if {[vercmp ${xcodeversion} 3.0] >= 0} {
@@ -32,10 +32,11 @@ if {[vercmp ${xcodeversion} 3.0] >= 0} {
 
 use_parallel_build yes
 configure.ccache   no
-#configure's tests don't work right for sed/gsed if we just set SED here
+# configure’s tests don’t work right for sed/gsed if we just set SED here
 configure.env      ac_cv_prog_AWK=awk ac_cv_path_SED=sed lt_ECHO=/bin/echo lt_cv_path_SED=sed
 configure.args     --with-installbuilddir=${prefix}/share/apr-1/build \
                    --enable-nonportable-atomics \
+                   --build=powerpc-apple-darwin10 --host=powerpc-apple-darwin10 \
                    ac_cv_func_setpgrp_void=no
 
 # ipv6 patch for https://bz.apache.org/bugzilla/show_bug.cgi?id=65087
