--- a/devel/libffi/Portfile
+++ b/devel/libffi/Portfile
@@ -27,23 +27,31 @@ checksums           rmd160 05606691305f980b3ea8a15aeed333780cc0c844 \
 
 patchfiles          powerpc-g3.patch
 
-if {${os.platform} eq "darwin" && ${os.major} < 10 && ![string match *clang* ${configure.compiler}]} {
+if {${os.platform} eq "darwin" && ${os.major} < 11 && ![string match *clang* ${configure.compiler}]} {
     # https://trac.macports.org/ticket/61170
     patchfiles-append   patch-libffi-intel-leopard-sysv.diff \
                         patch-libffi-tests-gcc42.diff
 }
 
-# Don't use macports gcc or clang toolchains to build this due to dependency cycles
+# Don’t use macports gcc or clang toolchains to build this due to dependency cycles
 compiler.blacklist-append macports-*
 
 if {${os.platform} eq "darwin" && ${os.major} < 11} {
-    # Doesn't actually use C++, and having the stdlib set to libc++
+    # Doesn’t actually use C++, and having the stdlib set to libc++
     # on 10.6 causes a macports-clang compiler to be chosen.
     configure.cxx_stdlib
 }
 
+# Fixes Rosetta build
+configure.args-append \
+                    CC_FOR_BUILD="gcc-4.2 -arch ppc" \
+                    CFLAGS_FOR_BUILD="-arch ppc" \
+                    --build=powerpc-apple-darwin10 \
+                    --with-ld=/usr/bin/ld \
+                    --with-as=/usr/bin/as
+
 # Older versions of cctools have a history of being problematic with complex
-# asm like libffi has, so opt for the integrated assembler if it's available
+# asm like libffi has, so opt for the integrated assembler if it’s available
 if {[string match *clang* ${configure.compiler}]} {
     configure.cflags-append -integrated-as
 }
