--- a/sysutils/grep/Portfile
+++ b/sysutils/grep/Portfile
@@ -1,6 +1,6 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
-PortSystem 1.0
+PortSystem      1.0
 PortGroup       compiler_blacklist_versions 1.0
 
 name            grep
@@ -16,7 +16,6 @@ long_description \
     Grep searches one or more input files for lines containing a match  \
     to a specified pattern. By default, grep prints the matching lines.
 homepage        https://www.gnu.org/software/grep/grep.html
-platforms       darwin
 master_sites    gnu
 use_xz          yes
 
@@ -35,13 +34,25 @@ post-patch {
 # error: type name requires a specifier or qualifier
 # error: expected member name or ';' after declaration specifiers
 # error: expected ';' at end of declaration list
-compiler.blacklist {clang < 500}
+compiler.blacklist *clang*
 
 # Ensure system version of grep is used instead of a possibly broken MacPorts version.
 configure.env   PATH=/usr/bin:$env(PATH)
 
 configure.args  --disable-silent-rules \
                 --program-prefix=g
+
+# Fix for Rosetta
+configure.args-append \
+                CC_FOR_BUILD="gcc-4.2" \
+                CXX_FOR_BUILD="g++-4.2" \
+                CFLAGS_FOR_BUILD="-arch ppc -m32" \
+                CXXFLAGS_FOR_BUILD="-arch ppc -m32" \
+                --build=powerpc-apple-darwin10 \
+                --host=powerpc-apple-darwin10 \
+                --target=powerpc-apple-darwin10 \
+                --with-ld=/usr/bin/ld \
+                --with-as=/usr/bin/as
 
 depends_build   port:gettext
 
@@ -80,7 +91,7 @@ variant libsigsegv description {Use libsigsegv} {
 notes "
 This port previously installed itself without a g* prefix, thus overshadowing\
 system binaries such as grep, fgrep, and egrep. The port is now changed so that\
-it does install with a g* prefix, like other GNU ports. This means that you'll\
+it does install with a g* prefix, like other GNU ports. This means that you’ll\
 now find GNU grep at ${prefix}/bin/ggrep. If you dislike typing ggrep, you can\
 create a shell alias or you can add ${prefix}/libexec/gnubin to your PATH,\
 wherein non-g* prefixed symlinks are installed. In other words,\
