--- a/databases/openldap/Portfile
+++ b/databases/openldap/Portfile
@@ -6,8 +6,8 @@ PortGroup           muniversal 1.0
 name                openldap
 conflicts           openldap-devel
 set my_name         openldap
-version             2.4.58
-revision            1
+version             2.6.2
+revision            0
 categories          databases
 maintainers         {mascguy @mascguy} openmaintainer
 license             openldap
@@ -23,22 +23,21 @@ distname            ${my_name}-${version}
 dist_subdir         ${my_name}
 extract.suffix      .tgz
 
-checksums           rmd160  0f01e09ed11ffa9472214dc23ae5934404c457f2 \
-                    sha256  57b59254be15d0bf6a9ab3d514c1c05777b02123291533134a87c94468f8f47b \
-                    size    5885225
+checksums           rmd160  4853029348ad99ec34ae275a115f4e88c64f4a64 \
+                    sha256  81d09345232eb62486ecf5acacd2c56c0c45b4a6c8c066612e7f421a23a1cf87 \
+                    size    6448362
 
 depends_lib-append  path:bin/perl:perl5 \
-                    port:tcp_wrappers \
                     port:cyrus-sasl2 \
                     port:libfetch \
                     path:lib/libssl.dylib:openssl \
                     port:db48 \
                     port:icu
 
-patchfiles          patch-ltmain.diff \
-                    patch-dynamic_lookup-11.diff \
-                    patch-fix_implicit.diff \
-                    patch-libressl.diff
+patchfiles-append   patch-ltmain.diff
+patchfiles-append   patch-dynamic_lookup-11.diff
+patchfiles-append   patch-fix_implicit.diff
+patchfiles-append   patch-libressl.diff
 
 configure.env-append        LANG=C
 configure.cppflags-append   -I${prefix}/include/db48 -I${prefix}/include/openssl -DBIND_8_COMPAT
@@ -50,6 +49,8 @@ platform darwin {
     }
 }
 
+compiler.blacklist-append   *clang* *gcc-4*
+
 configure.ldflags-append    -L${prefix}/lib/db48
 
 configure.args      --mandir=${prefix}/share/man \
@@ -57,10 +58,11 @@ configure.args      --mandir=${prefix}/share/man \
                     --with-cyrus-sasl \
                     --with-fetch \
                     --with-tls \
+                    --disable-wrappers \
                     --enable-crypt \
-                    --enable-wrappers \
                     --enable-syncprov \
-                    --enable-ipv6
+                    --enable-ipv6 \
+                    --build=powerpc-apple-darwin10
 
 startupitem.create  yes
 startupitem.name    slapd
@@ -69,11 +71,23 @@ startupitem.start   "${prefix}/libexec/slapd -u ldap -f ${prefix}/etc/openldap/s
 startupitem.stop    "\[ -r \${PID} \] && kill \$(cat \${PID})"
 
 variant aci description {Enable per-object ACIs (experimental)} {
-    configure.args-append --enable-aci
+    configure.args-append \
+                    --enable-aci
 }
 
 variant overlays description {Enable all available overlays} {
-    configure.args-append --enable-overlays
+    configure.args-append \
+                    --enable-overlays
+}
+
+# REVIEW: Disable wrappers by default for 2.6.x. Causes build failures; more investigation needed.
+variant wrappers description {Enable use of tcp_wrappers} {
+    configure.args-replace \
+                    --disable-wrappers \
+                    --enable-wrappers
+
+    depends_lib-append \
+                    port:tcp_wrappers
 }
 
 platform darwin {
@@ -110,7 +124,7 @@ post-destroot {
             "${destroot}${prefix}/var/run/openldap-data"
     }
 
-    # Delete the duplicate .conf files (leaves .conf.default) so upgrades won't overwrite .conf files.
+    # Delete the duplicate .conf files (leaves .conf.default) so upgrades won’t overwrite .conf files.
     file delete -force ${destroot}${prefix}/etc/openldap/slapd.conf
     file delete -force ${destroot}${prefix}/etc/openldap/ldap.conf
 }
