--- a/devel/glib2/Portfile
+++ b/devel/glib2/Portfile
@@ -9,13 +9,13 @@ PortGroup                   muniversal 1.0
 # Please keep the glib2 and glib2-devel ports as similar as possible.
 
 name                        glib2
-conflicts                   glib2-devel glib2-upstream
+conflicts                   glib2-devel
 set my_name                 glib
-version                     2.64.6
-revision                    2
-checksums                   rmd160  27938fd75bdcd4ca0afc8ebce6b137ed3c1fe6a5 \
-                            sha256  c36ee07a70164c71f046016fe6aaacd6368333c42590bc0cba47c344ffb853f1 \
-                            size    4781576
+version                     2.72.1
+revision                    0
+checksums           rmd160  48c867d89c423e6fd3c525e42a9e3ee41ea447a0 \
+                    sha256  c07e57147b254cef92ce80a0378dc0c02a4358e7de4702e9f403069781095fe2 \
+                    size    4890672
 
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  devel
@@ -37,22 +37,26 @@ long_description            Glib is a library which includes support routines \
 master_sites                gnome:sources/${my_name}/${branch}/
 
 patchfiles                  libintl.patch \
-                            implicit.patch \
                             patch-gio-tests-meson.build.diff \
-                            patch-glib-gmain.c.diff \
                             patch-glib_gunicollate.c.diff \
                             patch-gio_xdgmime_xdgmime.c.diff \
-                            patch-gio_gdbusprivate.c.diff \
                             patch-get-launchd-dbus-session-address.diff \
                             patch-gmodule-gmodule-dl.c.diff \
                             patch-meson_build-meson_options-appinfo.diff \
                             patch-meson-build-python-path.diff \
                             patch-meson_build-atomic-test-older-clang-versions.diff \
                             universal.patch \
-                            patch-glib2-findfolders-before-SL.diff
+                            patch-glib2-findfolders-before-SL.diff \
+                            patch-declarations.diff
 
-# this test fails (I believe wrongly) when configuring arm64 on Intel
-patchfiles-append           patch-glib2-allow-frexpl-test-to-pass.diff
+if {${os.platform} eq "darwin" && ${os.major} < 11} {
+	patchfiles-append	    patch-gio_gcredentialsprivate.h \
+                            patch-gio_gsocket.h
+}
+
+if {${os.platform} eq "darwin" && ${os.major} == 10 && ${build_arch} eq "ppc"} {
+	patchfiles-replace	    patch-glib2-findfolders-before-SL.diff patch-glib2-findfolders-before-Lion.diff
+}
 
 depends_build-append        port:gettext \
                             bin:xmllint:libxml2 \
@@ -77,7 +81,7 @@ if {[vercmp ${macosx_deployment_target} 10.9] < 0} {
 }
 
 # https://bugzilla.gnome.org/show_bug.cgi?id=697017
-compiler.blacklist-append   gcc-3.3 *gcc-4.0
+compiler.blacklist-append   gcc-3.3 *gcc-4.0 *gcc-4.2
 
 # -lresolv is needed at least on Tiger PPC.
 configure.ldflags-append    -lresolv \
@@ -86,8 +90,8 @@ configure.ldflags-append    -lresolv \
 configure.cflags-append     -fstrict-aliasing
 
 # stop excessive warnings
-configure.cflags-append     -Wno-deprecated-declarations
-configure.objcflags-append  -Wno-deprecated-declarations
+configure.cflags-append     -Wno-deprecated-declarations -Wno-declaration-after-statement
+configure.objcflags-append  -Wno-deprecated-declarations -Wno-declaration-after-statement
 
 configure.args              -Ddefault_library=both \
                             -Dwarning_level=0
@@ -109,17 +113,10 @@ if {${universal_possible} && [variant_isset universal]} {
 
 post-patch {
     reinplace -W ${worksrcpath} "s|@PYTHON@|${configure.python}|" meson.build
-    reinplace -W ${worksrcpath} "s|@PREFIX@|${prefix}|g" gio/gdbusprivate.c gio/xdgmime/xdgmime.c glib/gi18n-lib.h glib/gi18n.h gio/gdbusaddress.c
+    reinplace -W ${worksrcpath} "s|@PREFIX@|${prefix}|g" gio/xdgmime/xdgmime.c glib/gi18n-lib.h glib/gi18n.h gio/gdbusaddress.c
     reinplace "s|data_dirs = \"/usr|data_dirs = \"${prefix}/share:/usr|g" ${worksrcpath}/glib/gutils.c
     reinplace "s|path = \"/bin|path = \"${prefix}/bin:/bin|g" ${worksrcpath}/glib/gutils.c ${worksrcpath}/glib/gspawn.c
 }
-
-# this edit does not, for some reason, apply against the build-arm64 config.h
-# and should not be needed if we're using the muniversal PortGroup
-# needs testing on 32 bit systems to be certain of this
-#post-configure {
-#    system "ed - ${build.dir}/config.h < ${filespath}/config.h.ed"
-#}
 
 build.args-append           --verbose
 
@@ -152,7 +149,7 @@ post-destroot {
 }
 
 platform darwin {
-    configure.args-append   -Ddtrace=false
+    configure.args-append   -Ddtrace=false -Dtests=false 
 }
 
 platform darwin 8 {
@@ -182,5 +179,4 @@ if {![variant_isset quartz] && ![variant_isset x11]} {
     }
 }
 
-livecheck.type              gnome
 livecheck.name              ${my_name}
