--- a/lang/gcc11/Portfile
+++ b/lang/gcc11/Portfile
@@ -11,11 +11,10 @@ epoch               0
 
 name                gcc11
 
-# Note, ARM builds have their own version below...
+# Note, ARM builds have their own version below
 version             11.3.0
 revision            1
 
-platforms           darwin
 categories          lang
 maintainers         nomaintainer
 # an exception in the license allows dependents to not be GPL
@@ -69,11 +68,15 @@ if { ${os.arch} eq "arm" } {
 
 subport             libgcc11 { revision [ expr ${revision} + 0 ] }
 
+depends_lib-append  port:gcc10-bootstrap
+configure.cc        ${prefix}/libexec/gcc10-bootstrap/bin/gcc
+configure.cxx       ${prefix}/libexec/gcc10-bootstrap/bin/g++
+
 if { ${os.platform} eq "darwin" && ${os.major} >= 17 } {
     # On macOS 10.13 and later, compilation is extremely slow if SIP is
     # disabled; e.g. from ~30m with SIP enabled, to ~6 hours if disabled.
     #
-    # This is caused by gcc's build system setting DYLD_LIBRARY_PATH to ensure
+    # This is caused by gcc’s build system setting DYLD_LIBRARY_PATH to ensure
     # that the toolchain picks up newly built library versions, which seems to
     # trigger a pathologically slow path in dyld's library resolution.
     #
@@ -157,7 +160,8 @@ configure.args      --enable-languages=[join ${gcc_configure_langs} ","] \
                     --enable-libstdcxx-time \
                     --with-build-config=bootstrap-debug \
                     --with-bugurl=https://trac.macports.org/newticket \
-                    --enable-host-shared
+                    --enable-host-shared \
+                    --with-tune-cpu=G4
 
 # see https://lists.macports.org/pipermail/macports-dev/2017-August/036209.html
 # --disable-tls does not limit functionality
@@ -210,9 +214,9 @@ pre-configure {
     if {${configure.sdkroot} ne ""} {
         # We should be using --with-build-sysroot here.  Using --with-sysroot
         # changes the behavior of the installed gcc to look in that sysroot
-        # by default instead of /.  Using --with-build-sysroot is supposed
+        # by default instead of /. Using --with-build-sysroot is supposed
         # to be used during the build but not impact the installed product.
-        # Unfortunately, the build fails because the value doesn't get
+        # Unfortunately, the build fails because the value doesn’t get
         # plumbed everywhere it is supposed to.
         #
         # https://trac.macports.org/ticket/53726
@@ -224,16 +228,6 @@ pre-configure {
 
 }
 
-# https://trac.macports.org/ticket/29067
-# https://trac.macports.org/ticket/29104
-# https://trac.macports.org/ticket/47996
-# https://trac.macports.org/ticket/58493
-compiler.blacklist-append {clang < 800} gcc-4.0 *gcc-4.2 {llvm-gcc-4.2 < 2336.1} {macports-clang-3.[4-7]}
-
-# https://build.macports.org/builders/ports-10.13_x86_64-builder/builds/105513/steps/install-port/logs/stdio
-# c++/v1/functional:1408:2: error: no member named 'fancy_abort' in namespace 'std::__1'; did you mean simply 'fancy_abort'?
-compiler.blacklist-append {clang < 1000}
-
 # "-stdlib" would be passed on to the bootstrap compiler if present
 configure.cxx_stdlib
 
@@ -243,22 +237,13 @@ use_parallel_build  yes
 
 destroot.target     install install-info-host
 
-# Is this gcc release supported here.
-if { ${os.platform} eq "darwin" && ${os.major} < 10 } {
-    known_fail   yes
-    pre-fetch {
-        ui_error "${name} ${version} is not supported on Darwin ${os.major}"
-        return -code error "incompatible macOS version"
-    }
-}
-
 # gcc cannot build if libunwind-headers is active
 conflicts_build-append libunwind-headers
 
 # List of dylibs to be installed
-# Note that we really don't want to include libgcc_ext.10.[45].dylib here, but install_name_tool
-# doesn't know how to change the id of stubs, and it's easier than recreating them for each
-# gcc port.
+# Note that we really don’t want to include libgcc_ext.10.[45].dylib here, but install_name_tool
+# doesn’t know how to change the id of stubs, and it’s easier than recreating them for each gcc port.
+# See: https://github.com/iains/gcc-10-branch/issues/7#issuecomment-1136890197
 set dylibs {libgcc_ext.10.4.dylib libgcc_ext.10.5.dylib libgcc_s.1.dylib libgcc_s.1.1.dylib \
                 libgcc_s.2.dylib libgfortran.5.dylib libquadmath.0.dylib libstdc++.6.dylib \
                 libobjc-gnu.4.dylib libgomp.1.dylib libitm.1.dylib libssp.0.dylib libasan.6.dylib \
